--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "babel-core": "^4.6.6",
     "babel-loader": "^4.0.0",
     "react": "^0.12.2",
+    "react-dom": "^0.12.2",
+    "react-addons-clone-with-props": "^0.12.2",
     "webpack": "^1.7.2"
   }
 }
