--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "devDependencies": {
     "babel-core": "^4.6.6",
     "babel-loader": "^4.0.0",
-    "react": "^0.12.2",
-    "react-dom": "^0.12.2",
-    "react-addons-clone-with-props": "^0.12.2",
+    "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "webpack": "^1.7.2"
+  },
+  "dependencies": {
+    "react-addons-clone-with-props": "^0.14.7"
   }
 }
